@@ -4,9 +4,7 @@
  */
 	
 
-				$_POST['network_measure'] = str_replace("    ", '', $_POST['network_measure']);
-				$_POST['network_measure'] = str_replace(" ", '', $_POST['network_measure']);
-				$_POST['network_measure'] = str_replace(",", '', $_POST['network_measure']);
+				$_POST['network_measure'] = remove_number_format($_POST['network_measure']);
 
 				$miner_hashrate = trim($_POST['your_hashrate']) * trim($_POST['hash_level']);
 
